fix: spacing

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -81,4 +81,10 @@ body {
       max-height: 200px;
     }
   }
-  
+  .score {
+    width: 1300px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: row;
+  }
